# api_demo

./: Dockerfile  pyproject.toml  requirements.txt
api_poetry/: main.py  server.py  service.py
tests/: test_server.py  test_service.py  test_text_proc.py
