[tool.poetry]
name = "api-poetry"
version = "0.1.0"
description = ""
authors = ["Teodor Profeanu <teodor.profeanu@connatix.com>"]
readme = "README.md"
packages = [{include = "api_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
